--- a/syntaxbridge/package.json
+++ b/syntaxbridge/package.json
@@ -21,6 +21,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "framer-motion": "^11.1.7",
+    "gray-matter": "^4.0.3",
     "groq-sdk": "^0.3.3",
     "lucide-react": "^0.376.0",
     "next": "14.2.3",
@@ -30,6 +31,8 @@
     "react-dom": "^18",
     "react-icons": "^5.1.0",
     "react-syntax-highlighter": "^15.5.0",
+    "remark": "^15.0.1",
+    "remark-html": "^16.0.1",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7"
   },
