--- a/syntaxbridge/package.json
+++ b/syntaxbridge/package.json
@@ -20,7 +20,7 @@
     "@radix-ui/react-tabs": "^1.0.4",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
-    "framer-motion": "^11.1.7",
+    "framer-motion": "^11.2.6",
     "gray-matter": "^4.0.3",
     "groq-sdk": "^0.3.3",
     "lucide-react": "^0.376.0",
@@ -30,6 +30,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.1.0",
+    "react-intersection-observer": "^9.10.2",
     "react-syntax-highlighter": "^15.5.0",
     "remark": "^15.0.1",
     "remark-html": "^16.0.1",
